# advanced_databases_and_big_data_-Assignment_2-

./: .gitignore  Cargo.toml  Dockerfile  PLAN.md  README.md  clean_movies_data.py  config.toml  config.ts  dataFetcher.ts  database.ts  deno.json  dev.ts  docker-compose.yml  fresh.gen.ts  init_database.ts  mongo_database.ts  mysql-to-mongodb.js  mysql_database.ts  prompt.txt
components/: MainMenuButton.tsx
data/: InternetUsers_Cleaned.csv  RoleTable_Cleaned.csv  add_department.sql  add_employee.sql  artist.sql  country.sql  dept.csv  dept.sql  emp.csv  emp.sql  genre_country_view.sql  internet_user.sql  job.csv  job.sql  movie.sql  role.sql  search_employee.sql
data/collections/: Movies.Artist.json  Movies.Country.json  Movies.Internet_user.json  Movies.Movie.json  Movies.Role.json  Movies.Score_movie.json  script.js
data/queries/: adventure_genre_roles.sql
data/queries/mongodb/: average_movie_scores.mql  countries_with_most_movies.mql  movie_by_genre_and_year.mql
data/queries/mysql/: highest_avg_score.sql
data/tables/: artist.sql  internet_user.sql  role.sql  score_movie.sql
database/mysql/: database.ts  queries.ts
docs/: REPORT.md  TALKING_POINTS.md  TASK_1.md  TASK_2.md  TASK_3.md
islands/: AdventureGenreRolesModal.tsx  GenreCountryViewModal.tsx  HighestAvgScoreModal.tsx  MainMenuButton.tsx  ModalButton.tsx
routes/: _app.tsx  index.tsx
routes/api/: highest_avg_score.tsx
src/: clean-spreadsheet-data.py  dev.ts  fresh.gen.ts  tailwind.config.ts
src-lib/: Cargo.toml
src-ui/: Cargo.toml  package.json  tailwind.config.js
src-ui/src/: app.rs  fallback.rs  lib.rs  main.rs
src/components/: JSONTable.tsx
src/database/mongodb/: database.ts  queries.ts
src/database/mysql/: database.ts  queries.ts
src/islands/: AdventureGenreRolesModal.tsx  AverageMovieScoresModal.tsx  CountriesWithMostMoviesModal.tsx  MoviesByGenreAndYear.tsx
src/routes/: index.tsx
src/routes/api/: adventure_genre_roles.tsx  average_movie_scores.tsx  countries_with_most_movies.tsx  genre_country_view.tsx  movies_by_genre_and_year.tsx
