[workspace]
members = ["src-lib", "src-ui"]
resolver = "2"

[workspace.package]
authors = [
    "James Clarke <james@jamesdavidclarke.com>",
    "Jose Zea <josezea1999@gmail.com>",
]
repository = "https://github.com/JamesClarke7283/FerroPassGen"
license = "AGPL-3.0-or-later"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"
perf = "warn"
style = "warn"
complexity = "warn"
suspicious = "warn"
correctness = "warn"
cargo = "warn"
